TP#32879: Create IVerifiedOrderService

--- a/Code/ShipWorks.OrderLookup/ShipWorks.OrderLookup.csproj
+++ b/Code/ShipWorks.OrderLookup/ShipWorks.OrderLookup.csproj
@@ -338,6 +338,7 @@
     <Compile Include="ScanPack\ItemsToScanControl.xaml.cs">
       <DependentUpon>ItemsToScanControl.xaml</DependentUpon>
     </Compile>
+    <Compile Include="ScanPack\IVerifiedOrderService.cs" />
     <Compile Include="ScanPack\PackedControl.xaml.cs">
       <DependentUpon>PackedControl.xaml</DependentUpon>
     </Compile>
