Add Walmart warehouse order factory

--- a/Code/ShipWorks.Stores/ShipWorks.Stores.csproj
+++ b/Code/ShipWorks.Stores/ShipWorks.Stores.csproj
@@ -267,6 +267,9 @@
     <Compile Include="Platforms\Magento\Warehouse\MagentoStoreDtoFactory.cs" />
     <Compile Include="Platforms\Walmart\Warehouse\WalmartStore.cs" />
     <Compile Include="Platforms\Walmart\Warehouse\WalmartStoreDtoFactory.cs" />
+    <Compile Include="Platforms\Walmart\Warehouse\WalmartWarehouseItem.cs" />
+    <Compile Include="Platforms\Walmart\Warehouse\WalmartWarehouseOrder.cs" />
+    <Compile Include="Platforms\Walmart\Warehouse\WalmartWarehouseOrderFactory.cs" />
     <Compile Include="Warehouse\IStoreDtoHelpers.cs" />
     <Compile Include="Platforms\AmeriCommerce\AmeriCommerceCombineOrderNumberSearchProvider.cs" />
     <Compile Include="Platforms\AmeriCommerce\AmeriCommerceWebClient.cs" />
