TP#33429 save csproj

--- a/Code/ShipWorks.OrderLookup/ShipWorks.OrderLookup.csproj
+++ b/Code/ShipWorks.OrderLookup/ShipWorks.OrderLookup.csproj
@@ -359,6 +359,7 @@
       <DependentUpon>ScanPackItemControl.xaml</DependentUpon>
     </Compile>
     <Compile Include="ScanPack\ScanPackItemFactory.cs" />
+    <Compile Include="ScanPack\ScanPackOrderValidator.cs" />
     <Compile Include="ScanPack\ScanPackPipeline.cs" />
     <Compile Include="ScanPack\ScanPackState.cs" />
     <Compile Include="ScanPack\ScanPackViewModel.cs" />
