--- a/Code/ShipWorks.Ranorex.Tests/ShipWorksPerformanceTestSuite/ShipWorksPerformanceTestSuite/ShipWorksPerformanceTestSuite.csproj
+++ b/Code/ShipWorks.Ranorex.Tests/ShipWorksPerformanceTestSuite/ShipWorksPerformanceTestSuite/ShipWorksPerformanceTestSuite.csproj
@@ -102,6 +102,9 @@
     <Reference Include="SikuliModule">
       <HintPath>..\packages\SikuliIntegrator.1.1.0\lib\SikuliModule.dll</HintPath>
     </Reference>
+    <Reference Include="SikuliSharp">
+      <HintPath>..\packages\SikuliSharp.1.5.0\lib\net451\SikuliSharp.dll</HintPath>
+    </Reference>
     <Reference Include="System" />
     <Reference Include="System.Core">
       <RequiredTargetFramework>3.5</RequiredTargetFramework>
@@ -174,9 +177,6 @@
     <Compile Include="PrintLabel.cs">
       <id>227237b5-f1f0-4c34-8e14-58c2c87aacc8</id>
     </Compile>
-    <Compile Include="PrintLabel_OLD.cs">
-      <id>f29b43d8-2501-46ee-b274-c1931124fe77</id>
-    </Compile>
     <Compile Include="Process100Orders.cs">
       <id>a9c81702-c18c-4ede-9032-9824ffbb771a</id>
     </Compile>
@@ -190,16 +190,16 @@
       <id>eec7bf1b-84cb-450c-bd85-3ebf5f20d6d3</id>
     </Compile>
     <Compile Include="Recording1.cs">
-      <BoundTo>9c2016dd-c565-4e0d-b0b4-e210beb6dcc8</BoundTo>
+      <BoundTo>573c2d68-f1ca-477e-9cd4-d833577470a1</BoundTo>
       <DependentUpon>Recording1.rxrec</DependentUpon>
       <RecorderCode>true</RecorderCode>
-      <id>9b6439e1-3a9f-46e3-9c77-1f50be54b63c</id>
+      <id>ef28fb2b-0ab8-4338-8798-61adc8513442</id>
     </Compile>
     <Compile Include="Recording1.UserCode.cs">
-      <BoundTo>9c2016dd-c565-4e0d-b0b4-e210beb6dcc8</BoundTo>
+      <BoundTo>573c2d68-f1ca-477e-9cd4-d833577470a1</BoundTo>
       <DependentUpon>Recording1.rxrec</DependentUpon>
       <UserCode>true</UserCode>
-      <id>14b5ee66-d7af-4530-ab3a-34a1febae494</id>
+      <id>d8df270a-10be-4bc3-a9f1-1ddf96fef034</id>
     </Compile>
     <Compile Include="RestoreDatabase.cs">
       <id>1d2315c3-ba1a-4e4a-b93b-706f6915e157</id>
@@ -230,12 +230,6 @@
     </Compile>
     <Compile Include="SingleScanTime.cs">
       <id>0b1a80c1-d598-4a2c-951f-e871de4083da</id>
-    </Compile>
-    <Compile Include="SmokeTestRepository.cs">
-      <DependentUpon>SmokeTestRepository.rxrep</DependentUpon>
-      <id>3da35f2c-63e7-4bc4-9ef0-2a853ec7b580</id>
-      <BoundTo>e82e808c-e6fc-4c2d-ad30-d9f637256263</BoundTo>
-      <RepositoryCode>true</RepositoryCode>
     </Compile>
     <Compile Include="SwitchToOLM.cs">
       <id>3982c5ef-35a8-4199-9e6a-070b0878b6d2</id>
@@ -277,8 +271,8 @@
     </None>
     <None Include="Recording1.rxrec">
       <BoundTo>3b68fc90-8037-4fdc-8275-4f7d991469c4</BoundTo>
-      <id>9c2016dd-c565-4e0d-b0b4-e210beb6dcc8</id>
-      <recordtableid>c72dbb21-283a-4b9d-8e88-bfd5bbbedbe6</recordtableid>
+      <id>573c2d68-f1ca-477e-9cd4-d833577470a1</id>
+      <recordtableid>ced5588e-2db5-44e2-869b-77bdb07c4f89</recordtableid>
     </None>
     <None Include="ShipWorksPerformanceTestSuiteRepository.rximg">
       <BoundTo>3b68fc90-8037-4fdc-8275-4f7d991469c4</BoundTo>
@@ -291,17 +285,6 @@
       <repoid>7e065f7a-a759-472e-9183-5eb5699d7833</repoid>
       <reporootid>0dd6cfa7-ba04-43ea-9088-05ef7ddaa3f1</reporootid>
     </None>
-    <None Include="SmokeTestRepository.rximg">
-      <DependentUpon>SmokeTestRepository.rxrep</DependentUpon>
-      <id>8d779f15-6228-4b55-9819-cadef82594de</id>
-      <BoundTo>e82e808c-e6fc-4c2d-ad30-d9f637256263</BoundTo>
-      <imageblob>true</imageblob>
-    </None>
-    <None Include="SmokeTestRepository.rxrep">
-      <id>e82e808c-e6fc-4c2d-ad30-d9f637256263</id>
-      <repoid>cd6632f9-96a5-4c7a-aab9-b49d97e203b3</repoid>
-      <reporootid>4aacfef1-6402-4ba7-b3c9-270ac9a4db4a</reporootid>
-    </None>
   </ItemGroup>
   <ItemGroup>
     <Content Include="ShipWorksPerformanceTestSuite.rxtmg">
@@ -312,11 +295,6 @@
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
       <id>98924f3e-a20f-437e-a08e-13edcad284af</id>
     </Content>
-  </ItemGroup>
-  <ItemGroup>
-    <Folder Include="Scripts">
-      <id>49543db0-61fe-4889-91ae-416d578db41b</id>
-    </Folder>
   </ItemGroup>
   <ItemGroup>
     <Folder Include="BatchFile">
