TP#33479: Implement OdbcHubViewModel and OdbcHubPage. Add logic to other odbc wizard pages to not show if using an existing odbc store from the hub.

--- a/Code/ShipWorks.Stores.UI/ShipWorks.Stores.UI.csproj
+++ b/Code/ShipWorks.Stores.UI/ShipWorks.Stores.UI.csproj
@@ -707,6 +707,9 @@
     <EmbeddedResource Include="Platforms\Odbc\WizardPages\Import\OdbcImportSubqueryPage.resx">
       <DependentUpon>OdbcImportSubqueryPage.cs</DependentUpon>
     </EmbeddedResource>
+    <EmbeddedResource Include="Platforms\Odbc\WizardPages\OdbcHubPage.resx">
+      <DependentUpon>OdbcHubPage.cs</DependentUpon>
+    </EmbeddedResource>
     <EmbeddedResource Include="Platforms\Odbc\WizardPages\OdbcSetupFinishPage.resx">
       <DependentUpon>OdbcSetupFinishPage.cs</DependentUpon>
     </EmbeddedResource>
