TP#33479: Remove Create New Store button and add radio button toggle to create new store or connect to an existing store. Add wait spinner to show while stores are loading from hub. Show message in store list when no stores are found or an error occurs. Add required properties to OdbcStore.

--- a/Code/ShipWorks.Stores/ShipWorks.Stores.csproj
+++ b/Code/ShipWorks.Stores/ShipWorks.Stores.csproj
@@ -928,6 +928,7 @@
     <Compile Include="Warehouse\Encryption\WarehouseEncryptionService.cs" />
     <Compile Include="Warehouse\IStoreDtoFactory.cs" />
     <Compile Include="Warehouse\IWarehouseOrderDtoFactory.cs" />
+    <Compile Include="Warehouse\StoreData\OdbcStore.cs" />
     <Compile Include="Warehouse\UploadOrderRequest.cs" />
     <Compile Include="Warehouse\WarehouseOrderDtoFactory.cs" />
     <Compile Include="Warehouse\StoreData\EbayStore.cs" />
