TP#33612: Attempt at making auto archiving more resilient.  Added logging.  Refactored to not add certain tasks more than once to the action queue.

--- a/Code/ShipWorks/ShipWorks.Core.csproj
+++ b/Code/ShipWorks/ShipWorks.Core.csproj
@@ -583,6 +583,7 @@
     <Compile Include="Actions\Tasks\Common\IManageDisabledIndexesRepo.cs" />
     <Compile Include="Actions\Tasks\Common\IMissingIndexResolver.cs" />
     <Compile Include="Actions\Tasks\Common\IndexColumn.cs" />
+    <Compile Include="Actions\Tasks\Common\ISingleDispatchAction.cs" />
     <Compile Include="Actions\Tasks\Common\ManageDisabledIndexesRepo.cs" />
     <Compile Include="Actions\Tasks\Common\ManageIndexStateTask.cs" />
     <Compile Include="Actions\Tasks\Common\Editors\ValidateAddressTaskEditor.cs">
