--- a/Code/ShipWorks.Data.Model/ShipWorks.Data.Model.csproj
+++ b/Code/ShipWorks.Data.Model/ShipWorks.Data.Model.csproj
@@ -187,6 +187,7 @@
     <Compile Include="Custom\EntityClasses\GenericModuleOrderItemEntity.cs" />
     <Compile Include="Custom\EntityClasses\GenericModuleStoreEntity.cs" />
     <Compile Include="Custom\EntityClasses\GrouponOrderItemEntity.cs" />
+    <Compile Include="Custom\EntityClasses\OdbcStoreEntity.cs" />
     <Compile Include="Custom\EntityClasses\OnTracAccountEntity.Interface.cs" />
     <Compile Include="Custom\EntityClasses\IParcelAccountEntity.Interface.cs" />
     <Compile Include="Custom\EntityClasses\DhlExpressAccountEntity.ReadOnly.cs" />
