TP#: 33609: Now rerouting order charges.

--- a/Code/ShipWorks.Stores/ShipWorks.Stores.csproj
+++ b/Code/ShipWorks.Stores/ShipWorks.Stores.csproj
@@ -227,6 +227,7 @@
     <Compile Include="Orders\Split\Errors\OrderSplitException.cs" />
     <Compile Include="Orders\Split\Hub\IOrderDetailSplitterHub.cs" />
     <Compile Include="Orders\Split\Hub\IOrderSplitAuditHub.cs" />
+    <Compile Include="Orders\Split\Hub\OrderChargeSplitterHub.cs" />
     <Compile Include="Orders\Split\Hub\OrderItemSplitterHub.cs" />
     <Compile Include="Orders\Split\Hub\OrderSplitAuditHub.cs" />
     <Compile Include="Orders\Split\Hub\OrderSplitterHub.cs" />
