--- a/Code/ShipWorks/ShipWorks.Core.csproj
+++ b/Code/ShipWorks/ShipWorks.Core.csproj
@@ -1359,6 +1359,7 @@
       <DependentUpon>Resources.resx</DependentUpon>
     </Compile>
     <Compile Include="Properties\XamlNamespaces.cs" />
+    <Compile Include="Stores\Platforms\Ebay\CoreExtensions\Filters\EbayOrderIDCondition.cs" />
     <Compile Include="UI\Controls\IScanPack.cs" />
     <Compile Include="Warehouse\DTO\Orders\WarehouseGetOrdersResponse.cs" />
     <Compile Include="Warehouse\DTO\Orders\WarehouseImportDetails.cs" />
@@ -10589,7 +10590,9 @@
     <Resource Include="Resources\delete.png" />
     <None Include="Resources\branch_element_top.png" />
     <None Include="Resources\branch_element_bottom.png" />
-    <EmbeddedResource Include="Filters\Content\ConditionTree.xml" />
+    <EmbeddedResource Include="Filters\Content\ConditionTree.xml">
+      <SubType>Designer</SubType>
+    </EmbeddedResource>
     <None Include="Resources\Progress\indicator_blue.gif" />
     <None Include="Resources\Progress\circling_ball.gif" />
     <None Include="Resources\Progress\arrows_blue.gif" />
