--- a/Code/ShipWorks.Res/ShipWorks.Res.csproj
+++ b/Code/ShipWorks.Res/ShipWorks.Res.csproj
@@ -551,6 +551,7 @@
     <EmbeddedResource Include="Data\Administration\Scripts\Update\7.2\7.2.0.3.sql" />
     <EmbeddedResource Include="Data\Administration\Scripts\Update\7.3\7.3.0.0.sql" />
     <EmbeddedResource Include="Data\Administration\Scripts\Update\7.3\7.3.1.0.sql" />
+    <EmbeddedResource Include="Data\Administration\Scripts\Update\7.3\7.3.1.1.sql" />
     <Content Include="Templates\Distribution\Source\Emails\Shipment Notification\settings.xml" />
     <Content Include="Templates\Distribution\Source\Emails\Shipment Notification\template.xsl" />
     <Content Include="Templates\Distribution\Source\Invoices\Blue\invoiceHeaderBlue.jpg" />
